--- a/docs/ErrorHandling.mdx
+++ b/docs/ErrorHandling.mdx
@@ -1,9 +1,15 @@
-In the magical realm of Tiny MediatR, error handling swoops in like a valiant knight, ensuring that the kingdom remains peaceful and harmonious, even when faced with the unexpected twists and turns of software development.
+Of course! In the magical realm of Tiny MediatR and Tiny Injector, error handling swoops in like a valiant knight, ensuring that the kingdom remains peaceful and harmonious, even when faced with the unexpected twists and turns of software development.
+
+Tiny MediatR relies on Tiny Injector to provide robust dependency injection for its handler classes. If a requested service or dependency cannot be resolved, Tiny Injector will bravely throw one of its custom error classes, helping you identify and resolve issues with ease.
+
+With Tiny MediatR and Tiny Injector working together, your code is able to handle even the most complex tasks with grace and ease. Whether you're handling requests, publishing notifications, or simply managing dependencies, you can rely on these powerful libraries to keep your code running smoothly.
+
+So the next time you encounter an unexpected challenge in your code, rest easy knowing that Tiny MediatR and Tiny Injector have your back. With their help, you can ensure that your code is always running at its best, no matter what surprises may come your way.
 
 Our valiant hero, the mediator implementation, is armed with custom error classes that gallantly handle exceptions, protecting your application from the turmoil and pandemonium that could result from unforeseen circumstances. Let's embark on an enchanting journey through these custom error classes and see how they help maintain serenity in your application.
 
-ArgumentException: This whimsical little fellow is a custom error class that extends the standard Error class. It is designed to tackle situations where an argument to a function or method is invalid. When ArgumentException is called upon, it leaps into action, dutifully carrying a message that describes the nature of the error and, if provided, the name of the faulty parameter. With its mighty power, it brings clarity to the situation, helping developers understand the cause of the issue and make necessary adjustments.
+- ArgumentException: This whimsical little fellow is a custom error class that extends the standard Error class. It is designed to tackle situations where an argument to a function or method is invalid. When ArgumentException is called upon, it leaps into action, dutifully carrying a message that describes the nature of the error and, if provided, the name of the faulty parameter. With its mighty power, it brings clarity to the situation, helping developers understand the cause of the issue and make necessary adjustments.
 
-ArgumentNullException: A loyal companion to ArgumentException, the ArgumentNullException error class is specialized to address cases where a value is unexpectedly null or undefined. Extending ArgumentException, this trusty protector ensures that developers are informed when an argument is missing or not provided. It valiantly carries the message: "Unhandled Exception: ArgumentNullException: Value cannot be null." With the optional parameter name, it brings enlightenment to the developers, guiding them towards the source of the problem.
+- ArgumentNullException: A loyal companion to ArgumentException, the ArgumentNullException error class is specialized to address cases where a value is unexpectedly null or undefined. Extending ArgumentException, this trusty protector ensures that developers are informed when an argument is missing or not provided. It valiantly carries the message: "Unhandled Exception: ArgumentNullException: Value cannot be null." With the optional parameter name, it brings enlightenment to the developers, guiding them towards the source of the problem.
 
 With these two noble warriors by your side, your application is shielded from the chaos that may arise from unexpected errors. They stand guard, providing clear and insightful information to developers, allowing them to quickly address issues and maintain the tranquility and harmony of the Tiny MediatR kingdom.
